--- a/deploy/docker-compose-CeleryExecutor.yml
+++ b/deploy/docker-compose-CeleryExecutor.yml
@@ -23,7 +23,7 @@ services:
 
     # single shot initialize the database
     init-db:
-        image: wongwill86/air-tasks:branch-customAF
+        image: wongwill86/air-tasks:branch-nico
         restart: on-failure
         depends_on:
             - postgres
